--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.2.1
   http: ^1.1.0
   auto_size_text: ^3.0.0
+  go_router: ^13.0.0
   flutter:
     sdk: flutter
 
