--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
   provider: ^6.0.0
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
@@ -43,10 +45,10 @@ dependencies:
   http: ^1.1.0
   auto_size_text: ^3.0.0
   go_router: ^13.0.0
-  intl: ^0.19.0
-  shared_preferences: ^2.5.3
-  flutter:
+  flutter_localizations: # Flutter 內建的國際化支援
     sdk: flutter
+  intl: ^0.20.2
+  shared_preferences: ^2.5.3
 
 
 
@@ -55,18 +57,27 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
-  retrofit_generator: ^8.0.4
-  build_runner: ^2.4.7
-  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
+  flutter_intl: any
+  intl_utils: ^2.5.0
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
+  retrofit_generator: ^8.0.4
+
+
+flutter_intl:
+  enabled: true
+  arb_dir: lib/l10n
+  output_dir: lib/generated
+  class_name: S
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
